# azure-sdk-for-c

./: .README.md.swp  .build.sh  .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.html  CONTRIBUTING.md  Doxyfile  LICENSE  NOTICE.txt  README.md  SECURITY.md  build.ps1  cgmanifest.json  core.html  cpp.hint  cspell.json  emitter-design.md  index.html  iot.html  main.c  manifest.json  navtoc.html  other.html  safe-span.md  script.sh  storage.html  toc.html  vcpkg-configuration.json  vcpkg.json
project_template/: .clang-format  .gitignore  BUILDING.md  CMakeLists.txt  config.cmake.in  exports.lds
project_template/inc/az/: exampleshortname.h
project_template/inc/az/exampleshortname/: operations.h
project_template/src/: operations.c
project_template/test/: main.cpp  test_operations.cpp
sdk/core/az_core/: CHANGELOG.md  CMakeLists.txt  README.md
sdk/core/az_core/inc/: _az_cfg_prefix.h  _az_cfg_suffix.h  _az_spinlock.h  az_config.h  az_context.h  az_credentials.h  az_http_transport.h  az_json.h  az_log.h  az_platform.h  az_precondition.h  az_result.h  az_span.h  az_version.h
sdk/core/az_core/internal/: az_http_internal.h  az_log_internal.h  az_platform_internal.h  az_spinlock_internal.h
sdk/core/az_core/src/: az_aad.c  az_aad_private.h  az_credential_client_secret.c  az_credential_token.c  az_credential_token_private.h  az_http_pipeline.c  az_http_policy.c  az_http_policy_logging.c  az_http_policy_retry.c  az_http_private.h  az_http_request.c  az_http_response.c  az_json_builder.c  az_json_parser.c  az_json_pointer.c  az_json_private.h  az_json_string.c  az_json_string_private.h  az_json_token.c  az_precondition.c  az_span.c  az_span_private.h  az_spinlock.c
sdk/core/az_core/test/: CMakeLists.txt  main.c  test_az_credential_client_secret.c  test_az_http.c  test_az_json.c  test_az_logging.c  test_az_pipeline.c  test_az_policy.c
sdk/core/core/: CHANGELOG.md  CMakeLists.txt  README.md  json_state.md  package.txt
sdk/core/core/inc/: _az_cfg.h  _az_cfg_extern_include_prefix.h  _az_cfg_extern_include_suffix.h  _az_cfg_lang_ext.h  _az_cfg_prefix.h  _az_cfg_suffix.h  _az_cfg_test_include_prefix.h  _az_cfg_warn.h  _az_token_credential.h  az_access_token.h  az_action.h  az_assert.h  az_auth.h  az_base64.h  az_callback.h  az_cfg_prefix.h  az_cfg_suffix.h  az_client_secret_credential.h  az_config.h  az_const_str.h  az_context.h  az_contract.h  az_core.h  (+84 more)
sdk/identity/identity/: CMakeLists.txt  README.md
sdk/iot/common/: CMakeLists.txt
sdk/iot/core/: CMakeLists.txt  README.md
sdk/iot/hub/: CMakeLists.txt  README.md  readme.md
sdk/iot/pnp/: CMakeLists.txt  README.md
sdk/iot/provisioning/: CMakeLists.txt  README.md  readme.md
sdk/iot/tests/: CMakeLists.txt  az_iot_sas_token_tests.c  main.c
sdk/key_vault/key_vault/: CMakeLists.txt  README.md
sdk/keyvault/keyvault/: CMakeLists.txt  README.md
sdk/platform/noplatform/: CMakeLists.txt  README.md
sdk/platform/posix/: CMakeLists.txt  README.md
sdk/platform/win32/: CMakeLists.txt  README.md
sdk/samples/core/: CMakeLists.txt  README.md  az_log_listener.h  az_mqtt5_connection_user_config.h  az_mqtt5_user_config.h  azure_rpc_client.c  azure_rpc_client.h  main.c  mosquitto_multiple_rpc_sample.c  mosquitto_rpc_client_sample.c  mosquitto_rpc_server_sample.c  mosquitto_rpc_server_sample_json_parser.c  mosquitto_rpc_server_sample_json_parser.h  mosquitto_telemetry_consumer_sample.c  mosquitto_telemetry_producer_sample.c  paho_multiple_rpc_sample.c  paho_rpc_client_sample.c  paho_rpc_server_sample.c  paho_telemetry_consumer_sample.c  paho_telemetry_producer_sample.c  rpc_client_command_hash_table.h  rpc_client_config.h  rpc_client_pending_commands.h  unlock_json_parser.c  unlock_json_parser.h
sdk/samples/iot/: CMakeLists.txt  README.md  generate_certificate.cmd  generate_certificate.ps1  generate_certificate.sh  how_to_iot_hub_samples_windows.md  iot_sample_common.c  iot_sample_common.h  iot_sample_foundation.c  iot_sample_foundation.h  iot_samples_common.c  iot_samples_common.h  paho_iot_adu_sample.c  paho_iot_adu_sample_common.c  paho_iot_adu_sample_common.h  paho_iot_hub_c2d_sample.c  paho_iot_hub_credentials_sample.c  paho_iot_hub_csr_sample.c  paho_iot_hub_methods_sample.c  paho_iot_hub_pnp_component_example.c  paho_iot_hub_pnp_component_sample.c  paho_iot_hub_pnp_sample.c  paho_iot_hub_sas_telemetry_sample.c  paho_iot_hub_telemetry_sample.c  paho_iot_hub_twin_cbor_sample.c  paho_iot_hub_twin_sample.c  paho_iot_pnp_component_sample.c  paho_iot_pnp_sample.c  paho_iot_pnp_sample_common.c  paho_iot_pnp_sample_common.h  paho_iot_pnp_with_provisioning_sample.c  paho_iot_provisioning_csr_sample.c  paho_iot_provisioning_csr_trustbundle_sample.c  paho_iot_provisioning_sample.c  paho_iot_provisioning_sas_sample.c  pnp_helper.h  readme.md  sample.c  sample.h  sample_pnp.c  (+12 more)
sdk/storage/blobs/: CHANGELOG.md  CMakeLists.txt  README.md  version.txt
sdk/storage/storage/: CMakeLists.txt
sdk/storage/ustorageclient/: .gitignore  CMakeLists.txt  README.md
sdk/template/template/: .editorconfig  .gitignore  BUILDING.md  CMakeLists.txt  exports.def
sdk/tests/core/: CMakeLists.txt  az_test_definitions.h  main.c  mock_az_mqtt.c  mock_az_mqtt5.c  test_az_base64.c  test_az_context.c  test_az_credential_client_secret.c  test_az_event_pipeline.c  test_az_hfsm.c  test_az_http.c  test_az_json.c  test_az_logging.c  test_az_mqtt5_connection.c  test_az_mqtt5_request_hfsm.c  test_az_mqtt5_rpc.c  test_az_mqtt5_rpc_client.c  test_az_mqtt5_rpc_client_codec.c  test_az_mqtt5_rpc_client_hfsm.c  test_az_mqtt5_rpc_client_policy.c  test_az_mqtt5_rpc_server.c  test_az_mqtt5_rpc_server_codec.c  test_az_mqtt5_rpc_server_hfsm.c  test_az_mqtt5_rpc_server_policy.c  test_az_mqtt5_telemetry_consumer_codec.c  test_az_mqtt5_telemetry_consumer_hfsm.c  test_az_mqtt5_telemetry_producer_codec.c  test_az_mqtt5_telemetry_producer_hfsm.c  test_az_mqtt5_topic_parser.c  test_az_mqtt_connection.c  test_az_pipeline.c  test_az_policy.c  test_az_retry.c  test_az_span.c  test_az_url_encode.c
(+1102 files in other folders)
